--- a/example/index.html
+++ b/example/index.html
@@ -17,6 +17,7 @@
         <div id="door-frame" class="open">
             <div id="door"></div>
             <div id="door-label"></div>
+            <div id="door-lock"></div>
         </div>
     </div>
 </body>
