--- a/example/index.html
+++ b/example/index.html
@@ -19,8 +19,8 @@ limitations under the License.-->
     <title>State Machine Example: Door</title>
 
     <link rel="stylesheet" href="door.css">
-    <script type="application/dart" src="door_example.dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script defer src="door_example.dart.js"></script>
+    
 </head>
 <body>
     <div id="container">
